# eye_ball_tracking

./: .gitignore  CMakeLists.txt  README.md
data/images/R_postBPPV_linked/: pic_1.tiff  pic_10.tiff  pic_100.tiff  pic_101.tiff  pic_103.tiff  pic_104.tiff  pic_106.tiff  pic_11.tiff  pic_110.tiff  pic_111.tiff  pic_116.tiff  pic_117.tiff  pic_119.tiff  pic_120.tiff  pic_121.tiff  pic_123.tiff  pic_124.tiff  pic_126.tiff  pic_127.tiff  pic_13.tiff  pic_130.tiff  pic_132.tiff  pic_133.tiff  pic_134.tiff  pic_135.tiff  pic_136.tiff  pic_138.tiff  pic_139.tiff  pic_141.tiff  pic_142.tiff  pic_143.tiff  pic_144.tiff  pic_147.tiff  pic_15.tiff  pic_153.tiff  pic_154.tiff  pic_155.tiff  pic_156.tiff  pic_159.tiff  pic_160.tiff  (+150 more)
data/images/Rotary_Nystagmus/: pic_0.tiff  pic_1.tiff  pic_10.tiff  pic_100.tiff  pic_101.tiff  pic_102.tiff  pic_103.tiff  pic_104.tiff  pic_105.tiff  pic_106.tiff  pic_107.tiff  pic_108.tiff  pic_109.tiff  pic_11.tiff  pic_110.tiff  pic_111.tiff  pic_112.tiff  pic_113.tiff  pic_114.tiff  pic_115.tiff  pic_116.tiff  pic_117.tiff  pic_118.tiff  pic_119.tiff  pic_12.tiff  pic_120.tiff  pic_121.tiff  pic_122.tiff  pic_123.tiff  pic_124.tiff  pic_125.tiff  pic_126.tiff  pic_127.tiff  pic_128.tiff  pic_129.tiff  pic_13.tiff  pic_130.tiff  pic_131.tiff  pic_132.tiff  pic_133.tiff  (+139 more)
data/video/: Rotary_Nystagmus.mpeg
scripts/: camera_calib.ipynb  pupil-detector.ipynb
scripts/.ipynb_checkpoints/: camera_calib-checkpoint.ipynb
src/: CMakeLists.txt  camera.cc  camera.h  demo.cc  eyeball_tracker.cc  eyeball_tracker.h  geometry.cc  geometry.h  intersect.h  pupil_detector.cc  pupil_detector.h  solver.cc  solver.h  union_find.cc  union_find.h
src/app/: demo.cc
src/core/: eyeball_tracker.cc  eyeball_tracker.h  pupil_detector.cc  pupil_detector.h  union_find.cc  union_find.h
src/inputs/: abstract_input.cc  abstract_input.h  video_input.cc  video_input.h
src/math/: camera.cc  camera.h  geometry.cc  geometry.h  intersect.h  solver.cc  solver.h
